[gd_scene load_steps=6 format=2]

[ext_resource path="res://2d/source/scripts/builder/project/levels.gd" type="Script" id=1]
[ext_resource path="res://2d/assets/themes/transparent_borders.tres" type="Theme" id=2]
[ext_resource path="res://2d/source/scenes/builder/menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://2d/source/scenes/builder/status_bar.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.00392157, 0.211765, 0.882353 )

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource( 1 )

[node name="HeaderMenu" parent="." instance=ExtResource( 3 )]

[node name="Container" type="ScrollContainer" parent="."]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 576.0
mouse_filter = 2
theme = ExtResource( 2 )
custom_styles/bg = SubResource( 1 )

[node name="Grid" type="GridContainer" parent="Container"]
margin_right = 996.0
margin_bottom = 569.0
rect_min_size = Vector2( 200, 40 )
columns = 2

[node name="Level" type="Label" parent="Container/Grid"]
margin_top = 5.0
margin_right = 222.0
margin_bottom = 27.0
rect_min_size = Vector2( 222, 0 )
focus_previous = NodePath("../../../ToTitle")
text = "            Level."
align = 2

[node name="Grid1" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_right = 996.0
margin_bottom = 32.0
alignment = 2

[node name="LevelSpinbox" type="SpinBox" parent="Container/Grid/Grid1"]
margin_left = 40.0
margin_right = 138.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
page = 1.0
value = 1.0

[node name="Label2" type="Label" parent="Container/Grid/Grid1"]
margin_left = 142.0
margin_top = 5.0
margin_right = 770.0
margin_bottom = 27.0
mouse_filter = 1
text = "Changing the value here will change everything below this option."

[node name="LabelStartingLevel" type="Label" parent="Container/Grid"]
margin_top = 45.0
margin_right = 222.0
margin_bottom = 67.0
text = "Player Starts Here?"
align = 2

[node name="Grid3" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 36.0
margin_right = 996.0
margin_bottom = 76.0

[node name="StartingLevel2" type="CheckButton" parent="Container/Grid/Grid3"]
margin_right = 76.0
margin_bottom = 40.0
align = 2

[node name="Label3" type="Label" parent="Container/Grid/Grid3"]
margin_left = 80.0
margin_top = 9.0
margin_right = 557.0
margin_bottom = 31.0
mouse_filter = 1
text = "Player starts at this level when entering dungeon."

[node name="LevelSizeLabel" type="Label" parent="Container/Grid"]
margin_top = 85.0
margin_right = 222.0
margin_bottom = 107.0
focus_previous = NodePath("../../../ToTitle")
text = "Level Size."
align = 2

[node name="Grid2" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 80.0
margin_right = 996.0
margin_bottom = 112.0

[node name="LevelSizeSpinbox" type="SpinBox" parent="Container/Grid/Grid2" groups=["builder", "levels"]]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 48.0
max_value = 300.0
value = 60.0

[node name="Label4" type="Label" parent="Container/Grid/Grid2"]
margin_left = 102.0
margin_top = 5.0
margin_right = 515.0
margin_bottom = 27.0
mouse_filter = 1
text = "Level size in units. Unit height / unit width."

[node name="DontSetSpinBoxValueGreaterThan12" type="Label" parent="Container/Grid"]
margin_top = 121.0
margin_right = 222.0
margin_bottom = 143.0
focus_previous = NodePath("../../../ToTitle")
text = "Room Total."
align = 2

[node name="Grid4" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 116.0
margin_right = 996.0
margin_bottom = 148.0

[node name="RoomTotalSpinbox" type="SpinBox" parent="Container/Grid/Grid4"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 5.0
max_value = 12.0
value = 5.0

[node name="Label6" type="Label" parent="Container/Grid/Grid4"]
margin_left = 102.0
margin_top = 5.0
margin_right = 428.0
margin_bottom = 27.0
mouse_filter = 1
text = "Number of total room in this level."

[node name="RoomSizeMax" type="Label" parent="Container/Grid"]
margin_top = 157.0
margin_right = 222.0
margin_bottom = 179.0
focus_previous = NodePath("../../../ToTitle")
text = "  Room Size Max."
align = 2

[node name="Grid5" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 152.0
margin_right = 996.0
margin_bottom = 184.0

[node name="RoomSizeMaxSpinbox" type="SpinBox" parent="Container/Grid/Grid5"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 5.0
max_value = 10.0
value = 5.0

[node name="Label7" type="Label" parent="Container/Grid/Grid5"]
margin_left = 102.0
margin_top = 5.0
margin_right = 708.0
margin_bottom = 27.0
mouse_filter = 1
text = "Maximum value in units. Random integer between min and max."

[node name="RoomSizeMin" type="Label" parent="Container/Grid"]
margin_top = 193.0
margin_right = 222.0
margin_bottom = 215.0
focus_previous = NodePath("../../../ToTitle")
text = "Room Size Min."
align = 2

[node name="Grid6" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 188.0
margin_right = 996.0
margin_bottom = 220.0

[node name="RoomSizeMinSpinbox" type="SpinBox" parent="Container/Grid/Grid6"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 5.0
max_value = 10.0
value = 5.0

[node name="Label8" type="Label" parent="Container/Grid/Grid6"]
margin_left = 102.0
margin_top = 5.0
margin_right = 703.0
margin_bottom = 27.0
mouse_filter = 1
text = "Minimum value in units. Random integer between min and max."

[node name="MobsTotal" type="Label" parent="Container/Grid"]
margin_top = 229.0
margin_right = 222.0
margin_bottom = 251.0
focus_previous = NodePath("../../../ToTitle")
text = "Mobs Total."
align = 2
valign = 1

[node name="Grid7" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 224.0
margin_right = 996.0
margin_bottom = 256.0

[node name="MobsTotalSpinbox" type="SpinBox" parent="Container/Grid/Grid7"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="Label9" type="Label" parent="Container/Grid/Grid7"]
margin_left = 102.0
margin_top = 5.0
margin_right = 409.0
margin_bottom = 27.0
mouse_filter = 1
text = "Total mobs amount at this level."

[node name="ItemTotal" type="Label" parent="Container/Grid"]
margin_top = 265.0
margin_right = 222.0
margin_bottom = 287.0
focus_previous = NodePath("../../../ToTitle")
text = "Item Total."
align = 2

[node name="Grid8" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 260.0
margin_right = 996.0
margin_bottom = 292.0

[node name="ItemTotalSpinbox" type="SpinBox" parent="Container/Grid/Grid8"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
max_value = 99.0
value = 1.0

[node name="Label10" type="Label" parent="Container/Grid/Grid8"]
margin_left = 102.0
margin_top = 5.0
margin_right = 398.0
margin_bottom = 27.0
mouse_filter = 1
text = "Total item amount at this level."

[node name="LabelHideRandomCorridor" type="Label" parent="Container/Grid"]
margin_top = 321.0
margin_right = 222.0
margin_bottom = 368.0
focus_previous = NodePath("../../../ToTitle")
text = "Hide Random Corridor?"
align = 2
autowrap = true

[node name="Grid13" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 296.0
margin_right = 996.0
margin_bottom = 393.0

[node name="CheckButtonHideRandomCorridor" type="CheckButton" parent="Container/Grid/Grid13"]
margin_right = 76.0
margin_bottom = 97.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="Container/Grid/Grid13"]
margin_left = 80.0
margin_right = 770.0
margin_bottom = 97.0
rect_min_size = Vector2( 690, 0 )
mouse_filter = 1
text = "for this feature to work, Set hide_stone_walls to true. Hide a corridor from room one and a random room. Only a random value from 0 to 3 is used. When creating the corridors, The last preset room is excluded since that room is used to create the corridors."
autowrap = true

[node name="LabelStoreItems" type="Label" parent="Container/Grid"]
margin_top = 406.0
margin_right = 222.0
margin_bottom = 428.0
focus_previous = NodePath("../../../ToTitle")
text = "An item store?"
align = 2

[node name="Grid9" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 397.0
margin_right = 996.0
margin_bottom = 437.0

[node name="CheckButtonStoreItems" type="CheckButton" parent="Container/Grid/Grid9"]
margin_right = 76.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="Container/Grid/Grid9"]
margin_left = 80.0
margin_top = 9.0
margin_right = 482.0
margin_bottom = 31.0
mouse_filter = 1
text = "Is the store that sells only items enabled?"

[node name="LabelStoreArmor" type="Label" parent="Container/Grid"]
margin_top = 450.0
margin_right = 222.0
margin_bottom = 472.0
focus_previous = NodePath("../../../ToTitle")
text = "An armor store?"
align = 2

[node name="Grid10" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 441.0
margin_right = 996.0
margin_bottom = 481.0

[node name="CheckButtonStoreArmor" type="CheckButton" parent="Container/Grid/Grid10"]
margin_right = 76.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="Container/Grid/Grid10"]
margin_left = 80.0
margin_top = 9.0
margin_right = 486.0
margin_bottom = 31.0
mouse_filter = 1
text = "Is the store that sells only armor enabled?"

[node name="LabelStoreWeapons" type="Label" parent="Container/Grid"]
margin_top = 494.0
margin_right = 222.0
margin_bottom = 516.0
focus_previous = NodePath("../../../ToTitle")
text = "A weapon store?"
align = 2

[node name="Grid11" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 485.0
margin_right = 996.0
margin_bottom = 525.0

[node name="CheckButtonStoreWeapons" type="CheckButton" parent="Container/Grid/Grid11"]
margin_right = 76.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="Container/Grid/Grid11"]
margin_left = 80.0
margin_top = 9.0
margin_right = 515.0
margin_bottom = 31.0
mouse_filter = 1
text = "Is the store that sells only weapons enabled?"

[node name="LabelSavePoint" type="Label" parent="Container/Grid"]
margin_top = 538.0
margin_right = 222.0
margin_bottom = 560.0
focus_previous = NodePath("../../../ToTitle")
text = "Save Point Enabled?"
align = 2

[node name="Grid12" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 529.0
margin_right = 996.0
margin_bottom = 569.0

[node name="CheckButtonSavePoint" type="CheckButton" parent="Container/Grid/Grid12"]
margin_right = 76.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="Container/Grid/Grid12"]
margin_left = 80.0
margin_top = 9.0
margin_right = 510.0
margin_bottom = 31.0
mouse_filter = 1
text = "Should a save point be enabled for this level."

[node name="StatusBar" parent="." instance=ExtResource( 4 )]

[connection signal="value_changed" from="Container/Grid/Grid1/LevelSpinbox" to="." method="_on_LevelSpinbox_value_changed"]
[connection signal="toggled" from="Container/Grid/Grid3/StartingLevel2" to="." method="_on_StartingLevel_toggled"]
[connection signal="value_changed" from="Container/Grid/Grid2/LevelSizeSpinbox" to="." method="_on_LevelSizeSpinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid4/RoomTotalSpinbox" to="." method="_on_RoomTotalSpinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid5/RoomSizeMaxSpinbox" to="." method="_on_RoomSizeMaxSpinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid6/RoomSizeMinSpinbox" to="." method="_on_RoomSizeMinSpinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid7/MobsTotalSpinbox" to="." method="_on_mobs_total_spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid8/ItemTotalSpinbox" to="." method="_on_item_total_Spinbox_value_changed"]
[connection signal="toggled" from="Container/Grid/Grid13/CheckButtonHideRandomCorridor" to="." method="_on_Hide_Random_Corridor_toggled"]
[connection signal="toggled" from="Container/Grid/Grid9/CheckButtonStoreItems" to="." method="_on_CheckButtonStoreItems_toggled"]
[connection signal="toggled" from="Container/Grid/Grid10/CheckButtonStoreArmor" to="." method="_on_CheckButtonStoreArmor_toggled"]
[connection signal="toggled" from="Container/Grid/Grid11/CheckButtonStoreWeapons" to="." method="_on_CheckButtonStoreWeapons_toggled"]
[connection signal="toggled" from="Container/Grid/Grid12/CheckButtonSavePoint" to="." method="_on_CheckButtonSavePoint_toggled"]
[connection signal="tree_exiting" from="StatusBar" to="." method="_on_StatusBar_tree_exiting"]
